--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,17 @@
-<h1>{{ title }}</h1>
+<!-- <h1>{{ title }}</h1> -->
 <!-- <h3>Counter: {{ counter}} </h3>
 
 <button (click)="increaseBy(+1)">+1</button>
 <button (click)="resetCounter()">Reset</button>
 <button (click)="increaseBy(-1)">-1</button> -->
 
-<hr style="margin-top: 20px;">
+<!-- <hr style="margin-top: 20px;">
 
 <app-counter></app-counter>
 
 <app-heroes-hero></app-heroes-hero>
 
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
+
+<tdk-main-page></tdk-main-page>
+
